Removed video, fixed nav

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,20 +91,22 @@
             </div>
           </div>
 
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/WPU-xo8Reh8" frameborder="0" allowfullscreen></iframe>
+             <div class="wsite-section-wrap">
+              <div class="wsite-section wsite-body-section wsite-section-bg-color wsite-background-31 wsite-custom-background" style="background-color: #ffffff;background-image: none;" >
+                <div class="wsite-section-content">
+                     <div class="container">
+                  <div class="wsite-section-elements">
+                    <h2 class="wsite-content-title"><font size="7" color="#2a2a2a">AstecRoofingTrailer&#8203;</font></h2>
 
+             <div><div id="846376192724025713" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml">
+               <iframe width="1024" height="576" src="https://youtu.be/WPU-xo8Reh8" frameborder="0" allowfullscreen></iframe></div>
+</div>
+      </div>
+        </div>
+           </div>
 
-
-
-
-
-
-
-
-
-
-
-
+      </div>
+   </div>
 
     <footer class="page-footer">
    <div class="container">
@@ -126,7 +128,6 @@
    </div>
    <div class="footer-copyright">
      <div class="container">
-     © 2014 Copyright Text
      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
      </div>
    </div>
