--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,67 @@
+/* index page styling */
 
+body, html {
+  height: 100%;
+  margin: 0;
+  font: 400 15px/1.8 "Lato", sans-serif;
+  color: #777;
+}
 
+.bgimg-1, .bgimg-2, .bgimg-3 {
+  position: relative;
+  opacity: 0.65;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+.bgimg-1 {
+  background-image: url("../images/img-techos.jpg");
+  min-height: 100%;
+}
+
+.bgimg-2 {
+  background-image: url("../images/okah.jpg");
+  min-height: 400px;
+}
+
+.bgimg-3 {
+  background-image: url("../images/roof.jpg");
+  min-height: 400px;
+}
+
+.caption {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+  color: #000;
+}
+
+.caption span.border {
+  background-color: #111;
+  color: #fff;
+  padding: 18px;
+  font-size: 25px;
+  letter-spacing: 10px;
+}
+
+h3 {
+  letter-spacing: 5px;
+  text-transform: uppercase;
+  font: 20px "Lato", sans-serif;
+  color: #111;
+}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1024px) {
+    .bgimg-1, .bgimg-2, .bgimg-3 {
+        background-attachment: scroll;
+    }
+}
+/* end of index styling */
 a {
   color: #black;
 }
@@ -40,107 +102,4 @@ background-color: gray;
 .card {
   width: 400px;
   height: 400px;
-}
-body,h1,h2,h3,p,quote,small,form,input,ul,li,ol,label{
-    /* Page reset */
-    margin:0px;
-    padding:0px;
-}
-
-body{
-    /* Setting default text color, background and a font stack */
-    color:#black;
-    font-size:13px;
-    background: #f2f2f2;
-    font-family:Arial, Helvetica, sans-serif;
-}
-
-/* Gallery styles */
-
-#gallery{
-    /* CSS3 Box Shadow */
-    -moz-box-shadow:0 0 3px #AAAAAA;
-    -webkit-box-shadow:0 0 3px #AAAAAA;
-    box-shadow:0 0 3px #AAAAAA;
-
-    /* CSS3 Rounded Corners */
-
-    -moz-border-radius-bottomleft:4px;
-    -webkit-border-bottom-left-radius:4px;
-    border-bottom-left-radius:4px;
-
-    -moz-border-radius-bottomright:4px;
-    -webkit-border-bottom-right-radius:4px;
-    border-bottom-right-radius:4px;
-
-    border:1px solid white;
-
-    background:url(img/panel.jpg) repeat-x bottom center #ffffff;
-
-    /* The width of the gallery */
-    width:920px;
-    overflow:hidden;
-}
-
-#slides{
-    /* This is the slide area */
-    height:400px;
-
-    /* jQuery changes the width later on to the sum of the widths of all the slides. */
-    width:920px;
-    overflow:hidden;
-}
-
-.slide{
-    float:left;
-}
-
-#menu{
-    /* This is the container for the thumbnails */
-    height:45px;
-}
-
-ul{
-    margin:0px;
-    padding:0px;
-}
-
-li{
-    /* Every thumbnail is a li element */
-    width:60px;
-    display:inline-block;
-    list-style:none;
-    height:45px;
-    overflow:hidden;
-}
-
-li.inact:hover{
-    /* The inactive state, highlighted on mouse over */
-    background:url(img/pic_bg.png) repeat;
-}
-
-li.act,li.act:hover{
-    /* The active state of the thumb */
-    background:url(img/active_bg.png) no-repeat;
-}
-
-li.act a{
-    cursor:default;
-}
-
-.fbar{
-    /* The left-most vertical bar, next to the first thumbnail */
-    width:2px;
-    background:url(img/divider.png) no-repeat right;
-}
-
-li a{
-    display:block;
-    background:url(img/divider.png) no-repeat right;
-    height:35px;
-    padding-top:10px;
-}
-
-a img{
-    border:none;
 }
