--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 
 
-
-<link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <nav>
@@ -25,88 +24,48 @@
      </div>
    </nav>
 
-
-
-
-
-
-
-   <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
-
-
-
-
-
-
-
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <div id="main">
-
-    <div id="gallery">
-
-    <div id="slides">
-
-    <div class="slide"><img src="img/sample_slides/macbook.jpg" width="920" height="400" /></div>
-    <div class="slide"><img src="img/sample_slides/iphone.jpg" width="920" height="400" /></div>
-    <div class="slide"><img src="img/sample_slides/imac.jpg" width="920" height="400" /></div>
-
-    </div>
-
-    <div id="menu">
-
-    <ul>
-    <li class="fbar">&nbsp;</li><li class="menuItem"><a href=""><img src="img/sample_slides/thumb_macbook.png" /></a></li><li class="menuItem"><a href=""><img src="img/sample_slides/thumb_iphone.png" /></a></li><li class="menuItem"><a href=""><img src="img/sample_slides/thumb_imac.png" /></a></li>
-    </ul>
-
-    </div>
-
-    </div>
-
-    </div>
-
-
-
-
-
-    <div class="row">
-            <div class="col s12 m7">
-              <div class="card">
-                <div class="card-image">
-                  <img src="/images/astec.png">
-                  <span class="card-title"></span>
-                </div>
-                <div class="card-content">
-                  <p>ASTEC es una compañia de techos y paredes que puede
-
-                  </p>
-                </div>
-                <div class="card-action">
-                  <a href="#">This is a link</a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-             <div class="wsite-section-wrap">
-              <div class="wsite-section wsite-body-section wsite-section-bg-color wsite-background-31 wsite-custom-background" style="background-color: #ffffff;background-image: none;" >
-                <div class="wsite-section-content">
-                     <div class="container">
-                  <div class="wsite-section-elements">
-                    <h2 class="wsite-content-title"><font size="7" color="#2a2a2a">AstecRoofingTrailer&#8203;</font></h2>
-
-             <div><div id="846376192724025713" align="center" style="width: 100%; overflow-y: hidden;" class="wcustomhtml">
-               <iframe width="1024" height="576" src="https://youtu.be/WPU-xo8Reh8" frameborder="0" allowfullscreen></iframe></div>
-</div>
-      </div>
-        </div>
-           </div>
-
-      </div>
+   <div class="bgimg-1">
+     <div class="caption">
+       <span class="border">SCROLL DOWN</span>
+     </div>
    </div>
+
+   <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
+     <h3 style="text-align:center;">Parallax Demo</h3>
+     <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</p>
+   </div>
+
+   <div class="bgimg-2">
+     <div class="caption">
+       <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">LESS HEIGHT</span>
+     </div>
+   </div>
+
+   <div style="position:relative;">
+     <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+       <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+     </div>
+   </div>
+
+   <div class="bgimg-3">
+     <div class="caption">
+       <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
+     </div>
+   </div>
+
+   <div style="position:relative;">
+     <div style="color:#ddd;background-color:#282E34;text-align:center;padding:50px 80px;text-align: justify;">
+       <p>Scroll up and down to really get the feeling of how Parallax Scrolling works.</p>
+     </div>
+   </div>
+
+   <div class="bgimg-1">
+     <div class="caption">
+       <span class="border">COOL!</span>
+     </div>
+   </div>
+
+
 
     <footer class="page-footer">
    <div class="container">
@@ -128,12 +87,16 @@
    </div>
    <div class="footer-copyright">
      <div class="container">
+     © 2014 Copyright Text
      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
      </div>
    </div>
  </footer>
 
 
-
+ <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   </body>
 </html>
