--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Empire Roofing Solutions</title>
     <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
 
@@ -26,13 +26,16 @@
 
    <div class="bgimg-1">
      <div class="caption">
-       <span class="border">SCROLL DOWN</span>
+    <span class="border"> Empire Roofing Solutions</span>
+       <br><br>
+       <span class="border">NO MORE LEAKS!</span>
      </div>
    </div>
 
    <div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
-     <h3 style="text-align:center;">Parallax Demo</h3>
-     <p>Parallax scrolling is a web site trend where the background content is moved at a different speed than the foreground content while scrolling. Nascetur per nec posuere turpis, lectus nec libero turpis nunc at, sed posuere mollis ullamcorper libero ante lectus, blandit pellentesque a, magna turpis est sapien duis blandit dignissim. Viverra interdum mi magna mi, morbi sociis. Condimentum dui ipsum consequat morbi, curabitur aliquam pede, nullam vitae eu placerat eget et vehicula. Varius quisque non molestie dolor, nunc nisl dapibus vestibulum at, sodales tincidunt mauris ullamcorper, dapibus pulvinar, in in neque risus odio. Accumsan fringilla vulputate at quibusdam sociis eleifend, aenean maecenas vulputate, non id vehicula lorem mattis, ratione interdum sociis ornare. Suscipit proin magna cras vel, non sit platea sit, maecenas ante augue etiam maecenas, porta porttitor placerat leo.</p>
+     <h3 style="text-align:center;">Que es ASTEC?</h3>
+     <p> ASTEC es una corporacion de techos y paredes. Empire Solutions es una firma de ingenieria que se especiliza en la reparacion de todo tipo de techos
+     en todo tipo de estructura.</p>
    </div>
 
    <div class="bgimg-2">
@@ -49,8 +52,8 @@
 
    <div class="bgimg-3">
      <div class="caption">
-       <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">SCROLL UP</span>
-     </div>
+       <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;" </span>
+      </div>
    </div>
 
    <div style="position:relative;">
@@ -71,17 +74,17 @@
    <div class="container">
      <div class="row">
        <div class="col l6 s12">
-         <h5 class="white-text">Footer Content</h5>
-         <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <h2 class="white-text">Siguenos!</h2>
+          <ul>
+           <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/es.coolgreen/">Facebook</a></li>
+           <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
+           <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+         </ul>
        </div>
        <div class="col l4 offset-l2 s12">
-         <h5 class="white-text">Links</h5>
-         <ul>
-           <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-           <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-           <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-           <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-         </ul>
+
+
+         <h3>Nuestro horario:</h3>
        </div>
      </div>
    </div>
@@ -93,10 +96,5 @@
    </div>
  </footer>
 
-
- <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
   </body>
 </html>
