--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,17 +17,16 @@ body, html {
 
 }
 .bgimg-1 {
+  background-image: url("../images/download.png");
+  min-height: 400px;
+}
+.bgimg-2 {
   background-image: url("../images/img-techos.jpg");
   min-height: 100%;
 }
 
-.bgimg-2 {
-  background-image: url("../images/okah.jpg");
-  min-height: 400px;
-}
-
 .bgimg-3 {
-  background-image: url("../images/roof.jpg");
+  background-image: url("../images/gry.png");
   min-height: 400px;
 }
 
