--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,11 +74,11 @@
    <div class="container">
      <div class="row">
        <div class="col l6 s12">
-          <h2 class="white-text">Siguenos!</h2>
+          <h3 class="white-text">Siguenos!</h3>
           <ul>
-           <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/es.coolgreen/">Facebook</a></li>
-           <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li>
-           <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+          <h4> <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/es.coolgreen/">Facebook</a></li><h4>
+          <h4> <li><a class="grey-text text-lighten-3" href="#!">Instagram</a></li><h4>
+          <h4> <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li><h4>
          </ul>
        </div>
        <div class="col l4 offset-l2 s12">
