--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
   <body>
     <nav>
      <div class="nav-wrapper">
-       <a href="index.ejs"><img class="logo" src="/images/ers-logo.jpg" alt="ERS Logo"></a>
+       <a href="#"><img class="logo" src="/images/ers-logo.jpg" alt="ERS Logo"></a>
        <ul id="nav-mobile" class="right hide-on-med-and-down">
-         <li><a href="sass.html" class="h">Home</a></li>
+         <li><a href="#" class="h">Home</a></li>
          <li><a href="badges.html" class="a">About Us</a></li>
          <li><a href="collapsible.html" class="c">Contact Us</a></li>
        </ul>
